# progress-updater

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README_USERS.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
docs/: backends.rst  conf.py  help.rst  index.rst  installation.rst  make.bat  mongo.rst  redis.rst  settings.rst  sql.rst  updater.rst
progress_updater/: __init__.py  decorator.py  updater.py  utils.py
progress_updater/backends/: __init__.py  log.py  mongo.py  redis.py  sql.py
progress_updater/backends/adapters/: __init__.py  mongo.py  sql.py
task_updater/: __init__.py  decorator.py  updater.py
task_updater/backends/adapters/: base.py  redis.py
tests/: conftest.py  test_settings.py
tests/backends/: test_settings.py
tests/test_backends/: test_mongo.py  test_redis.py  test_settings.py  test_sql.py
tests/test_updater/: test_updater.py  test_utils.py
updater/: __init__.py  decorator.py  updater.py  utils.py
updater/backends/: __init__.py  base.py  log.py  mongo.py  redis.py  sql.py
updater/backends/adapters/: base.py
